[project]
name = "sepal"
version = "0.0.1"
dependencies = [
    "alembic==1.10.0",
    "boto3==1.26.37",
    "flask-debugtoolbar==0.13.1",
    "flask-login==0.6.2",
    "flask-migrate==4.0.4",
    "flask-static-digest==0.3.0",
    "flask-talisman==1.0.0",
    "flask-wtf[email]==1.1.1",
    "flask==2.2.3",
    "gunicorn==20.1.0",
    "jinja2==3.1.2",
    "psycopg2-binary==2.9.5",
    "pydantic==1.9.1",
    "requests==2.28.1",
    "sendgrid==6.9.7",
    "sqlalchemy==2.0.15",
    "toolz==0.12.0",
    "typing-extensions==4.4.0",
    "wtforms==3.0.1",
]

[project.optional-dependencies]
dev = [
    # "bandit==1.7.4",
    "black==23.1.0",
    "factory-boy==3.2.1",
    "isort==5.10.1",
    # livereload from 2.5.2 to 2.6.3  have the following error:
    # RuntimeError: Cannot close a running event loop
    "livereload==2.5.1",
    "mypy==1.2.0",
    "pip-tools==6.13.0",
    # "pre-commit==3.0.1",
    "pylsp-mypy==0.6.6",
    "pytest-factoryboy==2.5.1",
    "pytest-flask==1.2.0",
    "pytest-sugar==0.9.6",
    "pytest==7.2.2",
    "python-lsp-black==1.2.1",
    "python-lsp-ruff==1.3.0",
    "python-lsp-server==1.7.2",
    "ruff==0.0.261",
    "tox==4.4.11",
]

[tool.setuptools]
py-modules = ["sepal", "test"]

# [build-system"]","
# requires = ["setuptools ~= 58.0", "cython ~= 0.29.0"]","

[tool.isort]
profile = "black"
known_third_party = ["flask", "flask_login"]
known_first_party = ["test"]

[tool.mypy]
strict = true
exclude = [
    'flycheck_.*?\.py',
    'venv/',
    '\.mypy_cache/',
    '\.pytest_cache/',
    '\.ruff_cache/'
]

[[tool.mypy.overrides]]
module = "test.sepal.*"
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "flask_debugtoolbar",
    "flask_migrate",
    "flask_login",
    "flask_wtf",
    "sendgrid.*",
    "toolz.*",
    "wtforms.*",
]
ignore_missing_imports = true

[tool.pyright]
exclude = [".git", "venv", "__pycache__", ".mypy_cache"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
# TODO: see flake8-annotations and ruff's support for its rules as a possible
# workaround for this
ignore = ["E731", "F821"] # TODO: Reenable "Undefined name"
src = ["src", "test"]

[tool.ruff.isort]
known-first-party = ["sepal", "test"]

[tool.pylsp_mypy]
enabled = true
live_mode = true
strict = true
